# chip8-emulator

./: README.md
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/web/: index.html  index.js  wasm.js  wasm_bg.wasm
